--- a/Loading.WPF/MainWindow.xaml
+++ b/Loading.WPF/MainWindow.xaml
@@ -5,13 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Loading.WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
-        <ProgressBar Minimum="0" Maximum="100" Height="25" Name="pbStatus" />
-        <TextBlock Text="{Binding ElementName=pbStatus, Path=Value, StringFormat={}{0:0}%}" 
-                   HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <ProgressBar Height="25"
+                    HorizontalAlignment="Center"
+                     Minimum="0" Maximum="100"
+                     Name="progressBar"/>
+        <TextBlock Text="{Binding ElementName=progressBar, Path=Value, StringFormat={}{0:0}%}" 
+                   HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.467,1.895" Margin="374,224,373,163" Width="45" Height="32" />
         <Button Name="loadButton" Click="LoadButtonClick"
-            Content="Скачать" Foreground="Black"
-            Width="100" Margin="346,300,346,86"/>
+            Content="Скачать" Margin="340,300,340,86"/>
     </Grid>
 </Window>
